# django-epfl-misc

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  lint.yml  release.yml
django_epflmisc/: __init__.py
requirements/: requirements-lint.txt
tests/: settings.py  test_decorators.py
